force-app/main/default/objects/Event_Attendee__c/Event_Attendee__c.object-meta.xml
<CustomObject>
    <description>This Object holds information Attendees for the Event</description>
    <label>Event Attendee</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Event Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>