force-app/main/default/objects/Event_Attendee__c/fields/Attendee_Email__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Email__c</fullName>
    <description>Email for Event Attendee</description>
    <inlineHelpText>Email for Event Attendee</inlineHelpText>
    <label>Attendee Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>