force-app/main/default/objects/Event_Attendee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attendee_Name__c</columns>
    <columns>Attendee_Email__c</columns>
    <columns>Event__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>